[package]
name = "telegraf-carrier-infinity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
reqwest = { version = "0.11.6", features = ["blocking"] }
percent-encoding = "2.1.0"
hmac = "0.11.0"
sha-1 = "0.9.8"
base64="0.13.0"
http = "0.2.5"
roxmltree = "0.14.1"
rand = "0.8.4"
chrono = "0.4.19"